--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "eacp-admin": "webpack-dev-server --progress --port 9527 --config ./dev-server.config.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@hanzhisoft/eacp-admin": "^2.0.0-alpha1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "^5.0.1",
@@ -28,7 +30,11 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "3.9.0",
     "less-loader": "4.1.0",
-    "vue-template-compiler": "2.6.12"
+    "vue-template-compiler": "2.6.12",
+    "webpack": "5.68.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.7.4",
+    "webpack-merge": "^5.8.0"
   },
   "eslintConfig": {
     "root": true,
