--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "eacp-admin": "webpack-dev-server --progress --port 9527 --config ./dev-server.config.js",
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "eacp-admin": "webpack-dev-server --progress --config ./eacp-admin.config.js",
+    "dev": "vue-cli-service serve --mode dev",
+    "build:test": "vue-cli-service build --mode test",
+    "build:uat": "vue-cli-service build --mode uat",
+    "build:prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
@@ -26,10 +28,14 @@
     "@vue/cli-plugin-router": "^5.0.1",
     "@vue/cli-plugin-vuex": "^5.0.1",
     "@vue/cli-service": "~5.0.0",
+    "@vue/eslint-config-prettier": "6.0.0",
+    "babel-eslint": "10.1.0",
     "eslint": "^7.32.0",
+    "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-vue": "^8.0.3",
     "less": "3.9.0",
     "less-loader": "4.1.0",
+    "prettier": "1.19.1",
     "vue-template-compiler": "2.6.12",
     "webpack": "5.68.0",
     "webpack-cli": "4.10.0",
