--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "eacp-micro-app",
   "version": "0.1.0",
   "private": true,
+  "description": "翰智EACP平台 — 微应用开发模板项目",
+  "copyright": "Copyright © 广州翰智软件有限公司",
+  "author": {
+    "name": "hanzhisoft",
+    "email": "info@hanzhisoft.com",
+    "url": "https://www.hanzhigroup.cn"
+  },
   "scripts": {
-    "eacp-admin": "webpack-dev-server --progress --config ./eacp-admin.config.js",
     "dev": "vue-cli-service serve --mode dev",
+    "admin": "webpack-dev-server --progress --config ./eacp-admin.config.js",
+    "dev:admin": "yarn dev & yarn eacp-admin",
     "build:test": "vue-cli-service build --mode test",
     "build:uat": "vue-cli-service build --mode uat",
     "build:prod": "vue-cli-service build --mode prod",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@hanzhisoft/han-ui": "1.2.5",
+    "@hanzhisoft/han-ui": "^1.2.5",
     "@micro-zoe/micro-app": "^0.8.9",
     "core-js": "^3.8.3",
     "element-ui": "2.15.6",
