--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,12 @@
 NODE_ENV=development
 VUE_APP_API_BASE_URL=/api
 VUE_APP_CTX_PATH=/micro-app
+
+VUE_APP_APP_HOST=localhost
+VUE_APP_APP_PORT=8080
+
+VUE_APP_MICRO_APP_NAME=micro-app
+VUE_APP_MICRO_APP_BASE_ROUTE=/eacp/micro-app
+
+VUE_APP_API_PROXY_TARGET=http://192.168.70.216:10006
+VUE_APP_API_PROXY_PATH_REWRITE={"^/api":"api"}
