额外的微应用注册 & 基座服务端口配置提取到 .env.dev 中

--- a/.env.dev
+++ b/.env.dev
@@ -2,8 +2,9 @@ NODE_ENV=development
 VUE_APP_API_BASE_URL=/api
 VUE_APP_CTX_PATH=/micro-app
 
-VUE_APP_APP_HOST=localhost
+VUE_APP_ADMIN_PORT=9527
 VUE_APP_APP_PORT=8080
+VUE_APP_APP_HOST=localhost
 
 VUE_APP_MICRO_APP_NAME=micro-app
 VUE_APP_MICRO_APP_BASE_ROUTE=/eacp/micro-app
