--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "dev": "vue-cli-service serve --mode dev",
     "admin": "webpack-dev-server --progress --config ./eacp-admin.config.js",
-    "dev:admin": "yarn dev & yarn admin",
+    "dev:admin": "vue-cli-service serve --mode dev & webpack-dev-server --progress --config ./eacp-admin.config.js",
     "build:test": "vue-cli-service build --mode test",
     "build:uat": "vue-cli-service build --mode uat",
     "build:prod": "vue-cli-service build --mode prod",
