--- a/.env.prod
+++ b/.env.prod
@@ -1,3 +1,6 @@
 NODE_ENV=production
 VUE_APP_API_BASE_URL=/api
 VUE_APP_CTX_PATH=/micro-app
+
+VUE_APP_MICRO_APP_NAME=micro-app
+VUE_APP_MICRO_APP_BASE_ROUTE=/eacp/micro-app
