--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@hanzhisoft/han-ui": "^1.2.5",
+    "@hanzhisoft/han-ui": "1.2.7-beta3",
     "core-js": "^3.8.3",
     "element-ui": "2.15.6",
     "vue": "2.6.12",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@hanzhisoft/eacp-admin": "^2.0.0-alpha2",
+    "@hanzhisoft/eacp-admin": "2.0.0-alpha5",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "^5.0.1",
