--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "less": "3.9.0",
     "less-loader": "4.1.0",
-    "prettier": "1.19.1",
+    "prettier": "^2.7.1",
     "vue-template-compiler": "2.6.12",
     "webpack": "5.68.0",
     "webpack-cli": "4.10.0",
