--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@hanzhisoft/han-ui": "1.2.7-beta3",
+    "@hanzhisoft/han-ui": "1.2.7",
     "core-js": "^3.8.3",
     "element-ui": "2.15.6",
     "vue": "2.6.12",
