[Update] 开发者负载均衡隔离标识 x-isolation-version

--- a/.env.dev
+++ b/.env.dev
@@ -8,6 +8,10 @@ VUE_APP_APP_HOST=localhost
 
 VUE_APP_MICRO_APP_NAME=micro-app
 VUE_APP_MICRO_APP_BASE_ROUTE=/eacp/micro-app
+VUE_APP_MICRO_APP_APP=micro-app
 
-VUE_APP_API_PROXY_TARGET=http://192.168.70.216:10006
+# 开发者负载均衡隔离标识（附加到请求 headers['x-isolation-version'] ）
+VUE_APP_ISOLATION_VERSION=
+
+VUE_APP_API_PROXY_TARGET=http://192.168.40.216:10006
 VUE_APP_API_PROXY_PATH_REWRITE={"^/api":"api"}
