[Update] 升级适配V3版平台配置

--- a/package.json
+++ b/package.json
@@ -21,17 +21,27 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@hanzhisoft/han-ui": "1.2.7",
+    "@cbtak/nothing": "^1.1.17",
+    "@hanzhisoft/eacp-base-api": "^2.0.0-beta",
+    "@hanzhisoft/eacp-common-api": "^2.0.0-beta",
+    "@hanzhisoft/eacp-common-core": "^2.0.0-beta",
+    "@hanzhisoft/eacp-demo-api": "^2.0.0-beta",
+    "@hanzhisoft/han-ui": "^3.0.0",
+    "@hanzhisoft/han-ui-theme-element": "^2.0.0-beta",
+    "@hanzhisoft/han-ui-theme-hzred": "^2.0.0-beta",
+    "@hanzhisoft/han-ui-theme-mingcyan": "^2.0.0-beta",
+    "@hanzhisoft/han-ui-theme-techblue": "^2.0.0-beta",
     "core-js": "^3.8.3",
-    "element-ui": "2.15.6",
+    "nprogress": "^0.2.0",
     "vue": "2.6.12",
+    "vue-i18n": "8.14.0",
     "vue-router": "^3.5.1",
     "vuex": "3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@hanzhisoft/eacp-admin": "^2.0.0-alpha7",
+    "@hanzhisoft/eacp-admin": "^3.0.0-beta1",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "^5.0.1",
