--- a/package.json
+++ b/package.json
@@ -21,9 +21,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@hanzhisoft/han-ui": "1.2.7",
+    "@hanzhisoft/han-ui": "2.0.10",
     "core-js": "^3.8.3",
-    "element-ui": "2.15.6",
     "vue": "2.6.12",
     "vue-router": "^3.5.1",
     "vuex": "3.1.1"
@@ -31,7 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@hanzhisoft/eacp-admin": "^2.0.0-alpha7",
+    "@hanzhisoft/eacp-admin": "2.0.4-beta",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "^5.0.1",
